# ncb_OCR

./: .cursorrules  .env.example  .env.production  .env.production.example  .gitignore  API_CONTRACTS.md  CLAUDE.md  DEVELOPMENT_TASKS.md  Dockerfile  PRD.md  PROMPT.md  README.md  SETUP_GITHUB.md  TECHNICAL_SPEC.md  TEST_RESULTS.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.venv-auth/: pyvenv.cfg
.venv-oauth/: pyvenv.cfg
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  BLACKWELL_GPU.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_REPORT.md  DOCKER.md  ENHANCED_EMAIL_EXTRACTION_ARCHITECTURE.md  GMAIL_OAUTH_SETUP.md  GMAIL_PUBSUB_SETUP.md  GOOGLE_API_SETUP.md  GOOGLE_SHARED_DRIVE_SETUP.md  GPU_SELECTION_GUIDE.md  MANUAL_PROCESSING_GUIDE.md  NCB_SCHEMA_UPDATE.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  PUBSUB_OAUTH_SETUP.md  PUBSUB_WEB_CONSOLE_SETUP.md  RTX_5090_GPU_RESEARCH_REPORT.md
examples/: email_text_extraction_demo.py
scripts/: benchmark_pagination.py  check_drive_type.py  detect-gpu.sh  docker-entrypoint.sh  docker-test.sh  e2e_test_workflow.py  generate_and_upload_json.py  generate_gmail_token_pubsub.py  generate_ncb_json_from_receipts.py  generate_ncb_json_from_receipts_oauth.py  generate_sample_claims.py  generate_sample_claims_oauth.py  gmail-auth-manual.py  gmail-auth-simple.py  gmail-auth.py  gmail-drive-auth.py  list_email_attachments.py  process_email_manual.py  process_specific_email.py  quick-start.sh  reauth_gmail_drive.py  reauthorize_google_oauth.py  setup_pubsub_oauth.sh  test_redis_connection.py  test_shared_drive_access.py  test_single_email.py  test_single_email_with_ocr.py  upload_ncb_test_data_to_drive.py  upload_ncb_test_data_to_drive_updated.py  validate_env_vars.py  validate_system.py
src/: main.py
tests/: E2E_TEST_REPORT.md  E2E_WORKFLOW_TEST_REPORT.md  FIXES_REQUIRED.md  QUICK_FIX_GUIDE.md  README.md  TEST_COVERAGE.md  TEST_EXECUTION_REPORT_20251226.md  TEST_STRATEGY_EMAIL_EXTRACTION.md  TEST_SUMMARY.md  TEST_UPDATE_SUMMARY.md  (+2 more)
(+72 files in other folders)
